# cv

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  cv.yaml  generate.py  pyproject.toml  requirements.txt
.github/workflows/: build-cv.yml  deploy-to-homepage.yml
publications/: all.bib
stats/: google_scholar_stats.json
templates/latex/: cv.tex
templates/latex/sections/: artifacts.tex
templates/markdown/sections/: artifacts.md
